Migrate from Kuzu to RyuGraph
- Rename package from yfiles_jupyter_graphs_for_kuzu to yfiles_jupyter_graphs_for_ryugraph
- Rename class from KuzuGraphWidget to RyuGraphWidget
- Update all references, docstrings, and comments to use RyuGraph
- Update package configuration (pyproject.toml) with new name and URLs
- Update README and README_DEV with RyuGraph references
- Update example notebooks to use ryugraph package and RyuGraphWidget class
- Maintain API compatibility as RyuGraph is a fork of Kuzu

--- a/examples/introduction.ipynb
+++ b/examples/introduction.ipynb
@@ -5,9 +5,9 @@
    "id": "0ca372cc-893e-42de-aec8-3572ff039336",
    "metadata": {},
    "source": [
-    "# Visualizing Kuzu Databases <a target=\"_blank\" href=\"https://colab.research.google.com/github/yWorks/yfiles-jupyter-graphs-for-kuzu/blob/kuzu/examples/introduction.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
+    "# Visualizing RyuGraph Databases <a target=\"_blank\" href=\"https://colab.research.google.com/github/yWorks/yfiles-jupyter-graphs-for-ryugraph/blob/main/examples/introduction.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
     "\n",
-    "This notebook demonstrates how to visualize Cypher queries on [Kuzu databases](https://kuzudb.com) using `yfiles-jupyter-graphs-for-kuzu`."
+    "This notebook demonstrates how to visualize Cypher queries on [RyuGraph databases](https://ryugraph.io) using `yfiles-jupyter-graphs-for-ryugraph`."
    ]
   },
   {
@@ -25,8 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install kuzu --quiet\n",
-    "%pip install yfiles_jupyter_graphs_for_kuzu --quiet"
+    "%pip install ryugraph --quiet\n",
+    "%pip install yfiles_jupyter_graphs_for_ryugraph --quiet"
    ]
   },
   {
@@ -72,10 +72,10 @@
     "import requests\n",
     "\n",
     "urls = [\n",
-    "    \"https://kuzudb.com/data/movie-lens/movies.csv\",\n",
-    "    \"https://kuzudb.com/data/movie-lens/users.csv\",\n",
-    "    \"https://kuzudb.com/data/movie-lens/ratings.csv\",\n",
-    "    \"https://kuzudb.com/data/movie-lens/tags.csv\"\n",
+    "    \"https://ryugraph.io/data/movie-lens/movies.csv\",\n",
+    "    \"https://ryugraph.io/data/movie-lens/users.csv\",\n",
+    "    \"https://ryugraph.io/data/movie-lens/ratings.csv\",\n",
+    "    \"https://ryugraph.io/data/movie-lens/tags.csv\"\n",
     "]\n",
     "\n",
     "for url in urls:\n",
@@ -104,7 +104,7 @@
    "outputs": [],
    "source": [
     "import shutil\n",
-    "import kuzu\n",
+    "import ryugraph\n",
     "\n",
     "db_path = './_db_ml-small'\n",
     "shutil.rmtree(db_path, ignore_errors=True)\n",
@@ -120,8 +120,8 @@
     "    connection.execute('COPY Rating FROM \"./ratings.csv\" (HEADER=TRUE)')\n",
     "    connection.execute('COPY Tags FROM \"./tags.csv\" (HEADER=TRUE)')\n",
     "\n",
-    "db = kuzu.Database(db_path)\n",
-    "conn = kuzu.Connection(db)\n",
+    "db = ryugraph.Database(db_path)\n",
+    "conn = ryugraph.Connection(db)\n",
     "load_data(conn)"
    ]
   },
@@ -130,7 +130,7 @@
    "id": "19f9101c-b8fc-4727-b073-6ac9c82669b6",
    "metadata": {},
    "source": [
-    "# Visualize queries with `yfiles-jupyter-graphs-for-kuzu`"
+    "# Visualize queries with `yfiles-jupyter-graphs-for-ryugraph`"
    ]
   },
   {
@@ -140,8 +140,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from yfiles_jupyter_graphs_for_kuzu import KuzuGraphWidget\n",
-    "g = KuzuGraphWidget(conn)"
+    "from yfiles_jupyter_graphs_for_ryugraph import RyuGraphWidget\n",
+    "g = RyuGraphWidget(conn)"
    ]
   },
   {
@@ -169,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "g = KuzuGraphWidget(conn)\n",
+    "g = RyuGraphWidget(conn)\n",
     "g.add_node_configuration('Movie', text= lambda node : {\n",
     "        'text': 'Title:\\n' + node['properties']['title'], \n",
     "        'backgroundColor': 'rgba(0,0,0,0.7)', \n",
